# Bramble

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.de.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: README.md  commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml
deploy/: bramble-admin.service  bramble-backup-snapshot.sh  bramble.service  plesk-nginx-directives.conf
deploy/fail2ban/: bramble-filter.conf  bramble-jail.conf
docs/: ai-client-setup.md  connector-setup.de.md  deployment.md  journal.txt
docs/concepts/: maintenance-backlog.md  phase-2-mcp-server.md  phase-3-deployment.md  phase-4-import-and-connectors.md  phase-4b-admin-ui.md  phase-4c-journal-metadata-model.md  phase-4d-journal-context-tools.md  phase-4e-journal-workflows-and-rollout.md  phase-4f-open-items-resolution.md  phase-6-oauth-authorization-server.md
scripts/: Install-AgentGuardrails.ps1  gen_admin_secret.py  gen_oauth_client.py  gen_token.py  import_journal_txt.py  init_db.py  smoke_http.py
src/bramble/: __init__.py  __main__.py  admin_app.py  admin_audit.py  admin_auth.py  admin_config.py  admin_i18n.py  admin_main.py  admin_read_model.py  admin_time.py  agent_guide.py  auth_validator.py  client_grant.py  consent_store.py  journal_context.py  journal_db.py  journal_digest.py  journal_entry.py  journal_mcp_server.py  logging_setup.py  mcp_errors.py  oauth_config.py  oauth_owner_gate.py  oauth_provider.py  oauth_store.py  open_item.py  project_summary.py  rate_limiter.py  server_config.py  static_token_verifier.py  token_store.py
src/bramble/static/admin/: admin.css
src/bramble/templates/admin/: base.html  dashboard.html  help.html  login.html  project.html  search.html  tokens.html
src/bramble/templates/oauth/: consent.html  denied.html  login.html
tests/: conftest.py  test_admin_app.py  test_admin_audit.py  test_admin_auth.py  test_admin_config.py  test_admin_i18n.py  test_admin_read_model.py  test_auth_validator.py  test_consent_store.py  test_gen_admin_secret.py  test_gen_oauth_client.py  test_gen_token.py  test_import_journal_txt.py  test_journal_db.py  test_journal_entry.py  test_journal_mcp_server.py  test_logging_setup.py  test_main.py  test_mcp_errors.py  test_oauth_config.py  test_oauth_integration.py  test_oauth_owner_gate.py  test_oauth_provider.py  test_oauth_store.py  test_package_init.py  test_project_summary.py  test_rate_limiter.py  test_server_config.py  test_smoke_http.py  test_static_token_verifier.py  test_token_store.py
