[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bramble"
version = "0.1.0"
description = "Self-hosted MCP server providing a shared development journal across projects."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "leratos" }]
keywords = ["mcp", "journal", "fastmcp", "sqlite"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]

# Runtime-Deps. FastMCP-Range gemäss Entscheidung A im Phase-2-Konzept,
# python-json-logger gemäss Entscheidung I (JSON-Logs ab Phase 2).
dependencies = [
    "fastmcp>=3,<4",
    "starlette>=0.37,<2",
    "jinja2>=3.1,<4",
    "uvicorn>=0.30,<1",
    "argon2-cffi>=23,<26",
    "python-json-logger>=4,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
bramble-server = "bramble.__main__:main"
bramble-admin = "bramble.admin_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bramble = ["templates/admin/*.html", "static/admin/*.css"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
